--- a/2022RapidReactCode/2022RapidRobotBuilder.yaml
+++ b/2022RapidReactCode/2022RapidRobotBuilder.yaml
@@ -287,6 +287,26 @@ Children:
           name: Inverted, validators: null, value: true}
       Base: Motor Controller
       Name: intakeMotor
+    - Children: []
+      Properties:
+        Ping Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+            '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
+            '24', '25']
+          default: '0'
+          name: Ping Channel (Digital)
+          validators: [DigitalChannel]
+          value: '9'
+        Echo Channel (Digital): !!robotbuilder.data.properties.ChoicesProperty
+          choices: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+            '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
+            '24', '25']
+          default: '0'
+          name: Echo Channel (Digital)
+          validators: [DigitalChannel]
+          value: '10'
+      Base: Ultrasonic
+      Name: david
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -703,10 +723,10 @@ Children:
       Requires: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
         name: Requires, type: Subsystem, validators: null, value: Drive}
       Parameter presets: !!robotbuilder.data.properties.ParameterSetProperty
-        default: &id010 []
+        default: []
         name: Parameter presets
         validators: null
-        value: *id010
+        value: []
       Button on SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: true,
         name: Button on SmartDashboard, validators: null, value: true}
     Base: Command
@@ -718,7 +738,7 @@ Properties:
   Export Commands: !!robotbuilder.data.properties.BooleanProperty {default: true,
     name: Export Commands, validators: null, value: true}
   Desktop Support: !!robotbuilder.data.properties.BooleanProperty {default: false,
-    name: Desktop Support, validators: null, value: false}
+    name: Desktop Support, validators: null, value: true}
   Autonomous command parameters: !!robotbuilder.data.properties.ParametersProperty
     default: []
     name: Autonomous command parameters
@@ -732,10 +752,10 @@ Properties:
       Number, validators: null, value: 0}
   Export Subsystems: !!robotbuilder.data.properties.BooleanProperty {default: true,
     name: Export Subsystems, validators: null, value: true}
-  Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\ander\',
-    extension: null, folder: true, name: Wiring file location, validators: null, value: 'C:\Users\ander\'}
-  Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\ander\FRCProjects',
-    extension: null, folder: true, name: Export Directory, validators: null, value: 'C:\Users\ander\FRCProjects'}
+  Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\noaho\',
+    extension: null, folder: true, name: Wiring file location, validators: null, value: 'C:\Users\noah'}
+  Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\noaho\FRCProjects',
+    extension: null, folder: true, name: Export Directory, validators: null, value: 'C:\Users\noaho\Downloads\FRC-2022-Rapid-React-main\FRC-2022-Rapid-React-main\2022RapidReactCode'}
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
     name: Autonomous Command, type: Command, validators: null, value: Autonomous Command}
 Base: Robot
