--- a/2022RapidReactCode/2022RapidRobotBuilder.yaml
+++ b/2022RapidReactCode/2022RapidRobotBuilder.yaml
@@ -742,10 +742,10 @@ Properties:
       Number, validators: null, value: 0}
   Export Subsystems: !!robotbuilder.data.properties.BooleanProperty {default: true,
     name: Export Subsystems, validators: null, value: true}
-  Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\hayde\',
+  Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\Mary\',
     extension: null, folder: true, name: Wiring file location, validators: null, value: 'C:\Users\ander\'}
-  Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\hayde\FRCProjects',
-    extension: null, folder: true, name: Export Directory, validators: null, value: 'C:\Users\hayde\Documents\GitHub\FRC-2022-Rapid-React'}
+  Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\Mary\FRCProjects',
+    extension: null, folder: true, name: Export Directory, validators: null, value: .\}
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
     name: Autonomous Command, type: Command, validators: null, value: Autonomous Command}
 Base: Robot
