--- a/2022RapidReactCode/2022RapidRobotBuilder.yaml
+++ b/2022RapidReactCode/2022RapidRobotBuilder.yaml
@@ -21,6 +21,16 @@ Children:
           value: '0'
       Base: PowerDistribution
       Name: PDH
+    - Children: []
+      Properties:
+        Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
+          choices: &id001 ['0', '1', '2', '3', '4', '5', '6', '7']
+          default: '0'
+          name: Input Channel (Analog)
+          validators: &id002 [AnalogInput]
+          value: '2'
+      Base: Analog Input
+      Name: mainDistanceOutSensor
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -35,40 +45,42 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: &id001 []
+        value: &id003 []
     Base: Subsystem
     Name: Other
   - Children:
     - Children: []
       Properties:
-        Type: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id002 [Victor, Jaguar, Talon, VictorSP, PWMTalonSRX, Spark, SD540,
-            PWMVictorSPX, DMC60, PWMSparkMax, PWMTalonFX, PWMVenom]
-          default: PWMVictorSPX
-          name: Type
-          validators: null
-          value: PWMVictorSPX
-        Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id003 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
-            '11', '12', '13', '14', '15', '16', '17', '18', '19']
+        Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id001
           default: '0'
-          name: Output Channel (PWM)
-          validators: &id004 [PWMOutput]
+          name: Input Channel (Analog)
+          validators: *id002
+          value: '0'
+      Base: Analog Input
+      Name: beltBottomSensor
+    - Children: []
+      Properties:
+        CAN ID: !!robotbuilder.data.properties.ChoicesProperty
+          choices: &id004 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+            '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22',
+            '23', '24', '25', '26', '27', '28', '29', '30', '31']
+          default: '2'
+          name: CAN ID
+          validators: &id005 [CANID]
           value: '6'
-        Inverted: !!robotbuilder.data.properties.BooleanProperty {default: false,
-          name: Inverted, validators: null, value: false}
-      Base: Motor Controller
-      Name: beltMotor
+      Base: Victor SPX
+      Name: Victor SPX Belt
     - Children: []
       Properties:
         Input Channel (Analog): !!robotbuilder.data.properties.ChoicesProperty
-          choices: ['0', '1', '2', '3', '4', '5', '6', '7']
+          choices: *id001
           default: '0'
           name: Input Channel (Analog)
-          validators: [AnalogInput]
-          value: '0'
+          validators: *id002
+          value: '1'
       Base: Analog Input
-      Name: beltSensor
+      Name: beltTopSensor
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -83,7 +95,7 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: *id001
+        value: *id003
     Base: Subsystem
     Name: Belt
   - Children:
@@ -91,53 +103,39 @@ Children:
       - Children:
         - Children: []
           Properties:
-            Type: !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id002
-              default: PWMVictorSPX
-              name: Type
-              validators: null
-              value: PWMVictorSPX
-            Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id003
-              default: '0'
-              name: Output Channel (PWM)
-              validators: *id004
-              value: '3'
-            Inverted: !!robotbuilder.data.properties.BooleanProperty {default: false,
-              name: Inverted, validators: null, value: false}
-          Base: Motor Controller
-          Name: driveLeftBack
+            CAN ID: !!robotbuilder.data.properties.ChoicesProperty
+              choices: &id006 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+                '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21',
+                '22', '23', '24', '25', '26', '27', '28', '29', '30', '31']
+              default: '2'
+              name: CAN ID
+              validators: &id007 [CANID]
+              value: '4'
+          Base: Talon SRX
+          Name: Talon SRX L
         - Children: []
           Properties:
-            Type: !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id002
-              default: PWMVictorSPX
-              name: Type
-              validators: null
-              value: PWMVictorSPX
-            Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id003
-              default: '0'
-              name: Output Channel (PWM)
-              validators: *id004
-              value: '4'
-            Inverted: !!robotbuilder.data.properties.BooleanProperty {default: false,
-              name: Inverted, validators: null, value: false}
-          Base: Motor Controller
-          Name: driveLeftFront
+            CAN ID: !!robotbuilder.data.properties.ChoicesProperty
+              choices: *id004
+              default: '2'
+              name: CAN ID
+              validators: *id005
+              value: '5'
+          Base: Victor SPX
+          Name: Victor SPX L
         Properties:
           MotorController2: !!robotbuilder.data.properties.ChildSelectionProperty
             default: 1
             name: MotorController2
             type: PIDOutput
-            validators: &id005 [MotorControllerGroup, ChildDropdownSelected]
-            value: driveLeftFront
+            validators: &id008 [MotorControllerGroup, ChildDropdownSelected]
+            value: Victor SPX L
           MotorController1: !!robotbuilder.data.properties.ChildSelectionProperty
             default: 0
             name: MotorController1
             type: PIDOutput
-            validators: &id006 [MotorControllerGroup, ChildDropdownSelected]
-            value: driveLeftBack
+            validators: &id009 [MotorControllerGroup, ChildDropdownSelected]
+            value: Talon SRX L
           MotorController4: !!robotbuilder.data.properties.ChildSelectionProperty {
             default: null, name: MotorController4, type: PIDOutput, validators: null,
             value: null}
@@ -149,53 +147,37 @@ Children:
       - Children:
         - Children: []
           Properties:
-            Type: !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id002
-              default: PWMVictorSPX
-              name: Type
-              validators: null
-              value: PWMVictorSPX
-            Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id003
-              default: '0'
-              name: Output Channel (PWM)
-              validators: *id004
-              value: '1'
-            Inverted: !!robotbuilder.data.properties.BooleanProperty {default: false,
-              name: Inverted, validators: null, value: true}
-          Base: Motor Controller
-          Name: driveRightBack
+            CAN ID: !!robotbuilder.data.properties.ChoicesProperty
+              choices: *id006
+              default: '2'
+              name: CAN ID
+              validators: *id007
+              value: '2'
+          Base: Talon SRX
+          Name: Talon SRX R
         - Children: []
           Properties:
-            Type: !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id002
-              default: PWMVictorSPX
-              name: Type
-              validators: null
-              value: PWMVictorSPX
-            Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
-              choices: *id003
-              default: '0'
-              name: Output Channel (PWM)
-              validators: *id004
-              value: '2'
-            Inverted: !!robotbuilder.data.properties.BooleanProperty {default: false,
-              name: Inverted, validators: null, value: true}
-          Base: Motor Controller
-          Name: driveRightFront
+            CAN ID: !!robotbuilder.data.properties.ChoicesProperty
+              choices: *id004
+              default: '2'
+              name: CAN ID
+              validators: *id005
+              value: '3'
+          Base: Victor SPX
+          Name: Victor SPX R
         Properties:
           MotorController2: !!robotbuilder.data.properties.ChildSelectionProperty
             default: 1
             name: MotorController2
             type: PIDOutput
-            validators: *id005
-            value: driveRightFront
+            validators: *id008
+            value: Victor SPX R
           MotorController1: !!robotbuilder.data.properties.ChildSelectionProperty
             default: 0
             name: MotorController1
             type: PIDOutput
-            validators: *id006
-            value: driveRightBack
+            validators: *id009
+            value: Talon SRX R
           MotorController4: !!robotbuilder.data.properties.ChildSelectionProperty {
             default: null, name: MotorController4, type: PIDOutput, validators: null,
             value: null}
@@ -239,28 +221,32 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: *id001
+        value: *id003
     Base: Subsystem
     Name: Drive
   - Children:
     - Children: []
       Properties:
-        Type: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id002
-          default: PWMVictorSPX
-          name: Type
-          validators: null
-          value: PWMVictorSPX
-        Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
-          default: '0'
-          name: Output Channel (PWM)
-          validators: *id004
-          value: '5'
-        Inverted: !!robotbuilder.data.properties.BooleanProperty {default: false,
-          name: Inverted, validators: null, value: false}
-      Base: Motor Controller
-      Name: flywheelMotor
+        CAN ID: !!robotbuilder.data.properties.ChoicesProperty
+          choices: &id010 ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10',
+            '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22',
+            '23', '24', '25', '26', '27', '28', '29', '30', '31']
+          default: '2'
+          name: CAN ID
+          validators: &id011 [CANID]
+          value: '0'
+      Base: Talon FX
+      Name: Talon FX flywheel1
+    - Children: []
+      Properties:
+        CAN ID: !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id010
+          default: '2'
+          name: CAN ID
+          validators: *id011
+          value: '1'
+      Base: Talon FX
+      Name: Talon FX flywheel2
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -275,28 +261,20 @@ Children:
         default: []
         name: Constants
         validators: null
-        value: *id001
+        value: *id003
     Base: Subsystem
     Name: Flywheel
   - Children:
     - Children: []
       Properties:
-        Type: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id002
-          default: PWMVictorSPX
-          name: Type
-          validators: null
-          value: PWMVictorSPX
-        Output Channel (PWM): !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id003
-          default: '0'
-          name: Output Channel (PWM)
-          validators: *id004
-          value: '0'
-        Inverted: !!robotbuilder.data.properties.BooleanProperty {default: false,
-          name: Inverted, validators: null, value: true}
-      Base: Motor Controller
-      Name: intakeMotor
+        CAN ID: !!robotbuilder.data.properties.ChoicesProperty
+          choices: *id004
+          default: '2'
+          name: CAN ID
+          validators: *id005
+          value: '7'
+      Base: Victor SPX
+      Name: Victor SPX Intake
     Properties:
       Send to SmartDashboard: !!robotbuilder.data.properties.BooleanProperty {default: false,
         name: Send to SmartDashboard, validators: null, value: false}
@@ -331,7 +309,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id007 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
+          choices: &id012 ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11',
             '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23',
             '24', '25', '26', '27', '28', '29', '30', '31', '32']
           default: '1'
@@ -342,14 +320,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: &id008 [TypeDropdownSelected]
+          validators: &id013 [TypeDropdownSelected]
           value: BeltUpCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: &id009 [whenPressed, whenReleased, whileHeld, whenHeld, toggleWhenPressed,
+          choices: &id014 [whenPressed, whenReleased, whileHeld, whenHeld, toggleWhenPressed,
             cancelWhenPressed]
           default: whenPressed
           name: When to Run
@@ -369,7 +347,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id012
           default: '1'
           name: Button
           validators: null
@@ -378,14 +356,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id013
           value: BeltDownCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id014
           default: whenPressed
           name: When to Run
           validators: null
@@ -404,7 +382,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id012
           default: '1'
           name: Button
           validators: null
@@ -413,14 +391,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id013
           value: FlywheelOutCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id014
           default: whenPressed
           name: When to Run
           validators: null
@@ -439,7 +417,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id012
           default: '1'
           name: Button
           validators: null
@@ -448,14 +426,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id013
           value: FlywheelInCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id014
           default: whenPressed
           name: When to Run
           validators: null
@@ -474,7 +452,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id012
           default: '1'
           name: Button
           validators: null
@@ -483,14 +461,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id013
           value: IntakeInCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id014
           default: whenPressed
           name: When to Run
           validators: null
@@ -509,7 +487,7 @@ Children:
           validators: null
           value: []
         Button: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id007
+          choices: *id012
           default: '1'
           name: Button
           validators: null
@@ -518,14 +496,14 @@ Children:
           default: None
           name: Command
           type: Command
-          validators: *id008
+          validators: *id013
           value: IntakeOutCommand
         Timeout: !!robotbuilder.data.properties.PositiveDoubleProperty {default: 0,
           name: Timeout, validators: null, value: 0.0}
         Add Timeout: !!robotbuilder.data.properties.BooleanProperty {default: false,
           name: Add Timeout, validators: null, value: false}
         When to Run: !!robotbuilder.data.properties.ChoicesProperty
-          choices: *id009
+          choices: *id014
           default: whenPressed
           name: When to Run
           validators: null
@@ -752,9 +730,9 @@ Properties:
       Number, validators: null, value: 0}
   Export Subsystems: !!robotbuilder.data.properties.BooleanProperty {default: true,
     name: Export Subsystems, validators: null, value: true}
-  Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\Mary\',
+  Wiring file location: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\ander\',
     extension: null, folder: true, name: Wiring file location, validators: null, value: 'C:\Users\ander\'}
-  Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\Mary\FRCProjects',
+  Export Directory: !!robotbuilder.data.properties.FileProperty {default: 'C:\Users\ander\FRCProjects',
     extension: null, folder: true, name: Export Directory, validators: null, value: ..\}
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
     name: Autonomous Command, type: Command, validators: null, value: Autonomous Command}
